add groupid filter

--- a/dependency-visualizer-web/src/style.css
+++ b/dependency-visualizer-web/src/style.css
@@ -18,7 +18,11 @@
 }
 
 .filter-style {
-    background-color: aqua;
+    background-color: #EDE3DB;
     width: 100% !important;
     padding: 5px;
+}
+
+.container {
+    width: 100%;
 }
