--- a/dependency-visualizer-web/src/style.css
+++ b/dependency-visualizer-web/src/style.css
@@ -15,6 +15,7 @@
 .container {
     margin-left: 0;
     margin-right: 0;
+    width: 100%;
 }
 
 .filter-style {
@@ -23,6 +24,7 @@
     padding: 5px;
 }
 
-.container {
-    width: 100%;
+.form-inline > * {
+    margin-top: 5px;
+    margin-right: 5px;
 }
